argo/apps/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8686
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: music
              mountPath: /music
            - name: torrents
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: torrents
          persistentVolumeClaim:
            claimName: nfs-pvc-torrents
        - name: music
          persistentVolumeClaim:
            claimName: nfs-pvc-music
