argo/apps/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: lidarr
  name: lidarr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8686
      targetPort: 8686
      protocol: TCP
  selector:
    app.kubernetes.io/name: lidarr
