argo/apps/lidarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/name: lidarr
  annotations:
    gethomepage.dev/description: Dynamically Detected lidarr
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media management
    gethomepage.dev/icon: lidarr.png
    gethomepage.dev/name: Lidarr
spec:
  rules:
    - host: "lidarr.lan"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 80
